<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="8dp"
        app:cardCornerRadius="4dp">

        <RelativeLayout
                android:layout_margin="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <ImageView
                    android:id="@+id/teamBadge"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    tools:background="@drawable/english_premier_league" />

            <TextView
                    android:id="@+id/teamName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_margin="15dp"
                    tools:text="Man United"
                    android:layout_toEndOf="@+id/teamBadge"/>
        </RelativeLayout>

</android.support.v7.widget.CardView>