...
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                         />
            </TableRow>
            <TableRow>
                <TextView
                    android:id="@+id/tvHomeTeam"
                    android:text="@string/home_team"
                    android:textSize="18sp"
                    android:textAlignment="center"
                />

                <TextView
                    android:id="@+id/tvAwayTeam"
                    android:layout_column="4"
                    android:text="Away Team"
                    android:textAlignment="center"
                    android:textSize="18sp" />
            </TableRow>
        </TableLayout>
...
